--- a/local.yml
+++ b/local.yml
@@ -1,6 +1,8 @@
 ---
 - hosts: localhost
+  become: yes
   tasks:
     - name: one
       shell: logger pulltask
-    
+    - name: two
+      user: name=pull state=present    
